--- a/languages/uix-page-builder.pot
+++ b/languages/uix-page-builder.pot
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Uix Shortcodes 1.0.0\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tags/_s\n"
 "POT-Creation-Date: 2015-06-12 21:51:31+0000\n"
-"POT-Revision-Date: Fri Jan 13 2017 11:46:22 GMT+0800 (CST)\n"
+"POT-Revision-Date: Fri Jan 13 2017 12:36:21 GMT+0800 (CST)\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -75,42 +75,48 @@ msgstr ""
 msgid "Layout"
 msgstr ""
 
-#: ../uix-page-builder.php:1016
+#: ../uix-page-builder.php:1022
 #, php-format
 msgid ""
-"You could <a href=\"%s\">create</a> Uix Page Builder template file (from the "
-"directory <strong>\"/wp-content/plugins/uix-page-builder/theme_templates/page-"
-"uix_page_builder.php\"</strong> ) in your templates directory."
+"You could <a class=\"button button-small\" href=\"%s\">create</a> Uix Page "
+"Builder template file (from the directory <strong>\"/wp-content/plugins/uix-"
+"page-builder/theme_templates/page-uix_page_builder.php\"</strong> ) in your "
+"templates directory.  "
 msgstr ""
 
-#: ../uix-page-builder.php:1088
+#: ../uix-page-builder.php:1025
+#, php-format
+msgid "<a href=\"%1$s\">Hide Notice</a>"
+msgstr ""
+
+#: ../uix-page-builder.php:1096
 #, php-format
 msgid ""
 "<a target=\"_blank\" href=\"%1$s\"><i class=\"dashicons dashicons-welcome-write-"
 "blog\"></i> Edit this template</a>"
 msgstr ""
 
-#: ../uix-page-builder.php:1160 ../uix-page-builder.php:1233
+#: ../uix-page-builder.php:1168 ../uix-page-builder.php:1241
 msgid ""
 "<div class=\"notice notice-success\"><p>Operation successfully completed!"
 "</p></div>"
 msgstr ""
 
-#: ../uix-page-builder.php:1162
+#: ../uix-page-builder.php:1170
 msgid ""
 "<div class=\"notice notice-error\"><p><strong>There was a problem copying your "
 "template files:</strong> Please check your server settings. You can upload "
 "files to theme templates directory using FTP.</p></div>"
 msgstr ""
 
-#: ../uix-page-builder.php:1167
+#: ../uix-page-builder.php:1175
 msgid ""
 "<div class=\"notice notice-error\"><p><strong>There was a problem removing "
 "your template files:</strong> Please check your server settings. You can "
 "upload files to theme templates directory using FTP.</p></div>"
 msgstr ""
 
-#: ../uix-page-builder.php:1170
+#: ../uix-page-builder.php:1178
 msgid "<div class=\"notice notice-success\"><p>Remove successful!</p></div>"
 msgstr ""
 
@@ -484,7 +490,7 @@ msgstr ""
 
 #: ../helper/tabs/about.php:15
 msgid ""
-"You could add a new page with Uix Page Builder to your WordPress site, find "
+"You could add any new pages using the plugin to your WordPress site, find "
 "the <strong>Pages</strong> menu in the WordPress Dashboard Navigation menu. "
 "Click <strong>Add new</strong>. The <strong>\"Uix Page Builder "
 "Attributes\"</strong> section applies page builder templates to your new page."
@@ -649,14 +655,17 @@ msgid ""
 "content/plugins/) And upload files there.)</h4>"
 msgstr ""
 
-#: ../helper/tabs/usage.php:18
+#: ../helper/tabs/usage.php:15
 msgid ""
-"<h4 class=\"uix-bg-custom-title\">2. Embed a shortcode into the editor of any "
-"post, page, or custom post type. Use <code>[uix_pb_sections]</code> to add "
-"it to your Post, Widgets or Page content.</h4>"
+"<h4 class=\"uix-bg-custom-title\">2. Create a new WordPress file or edit an "
+"existing one. Just make sure to select this new created template file as the "
+"\"Template\" for this page from the \"Attributes\" section. Enter page title "
+"like \"Custom One Page\". Save the page and hit \"Preview\" to see how it looks. "
+"( You could specify the template name, in this case I used \"Uix Page Builder "
+"Template\". )</h4>"
 msgstr ""
 
-#: ../helper/tabs/usage.php:26
+#: ../helper/tabs/usage.php:21
 #, php-format
 msgid ""
 "You could <a href=\"%s\">create</a> Uix Page Builder template file (from the "
@@ -664,18 +673,7 @@ msgid ""
 "uix_page_builder.php\" ) in your templates directory."
 msgstr ""
 
-#: ../helper/tabs/usage.php:35
-msgid ""
-"<h4 class=\"uix-bg-custom-title\">3. Create a new WordPress file or edit an "
-"existing one. Just make sure to select this new created template file as the "
-"\"Template\" for this page from the \"Attributes\" section. Enter page title "
-"like \"Custom One Page\". Save the page and hit \"Preview\" to see how it looks. "
-"( You should specify the template name, in this case I used \"Uix Page "
-"Builder Template\". The \"Template Name: Uix Page Builder Template\" tells "
-"WordPress that this will be a custom page template. )</h4>"
-msgstr ""
-
-#: ../helper/tabs/usage.php:42
+#: ../helper/tabs/usage.php:32
 msgid ""
 "<p>You will find <strong>\"Uix Page Builder Attributes\"</strong> settings in "
 "a meta box in your WordPress backend when you create a new page or when you "
@@ -683,37 +681,14 @@ msgid ""
 "\"Publish\" meta box.</p>"
 msgstr ""
 
-#: ../helper/tabs/usage.php:50
+#: ../helper/tabs/usage.php:41
 msgid ""
-"<h4 class=\"uix-bg-custom-title\">4. You can pretty much custom every aspect "
-"of the look and feel of this page by modifying the <code>*.php</code> "
-"template files <strong>(Access the path to the themes directory)</strong> . "
-"Best Practices for Editing WordPress Template Files:</h4>"
+"<h4 class=\"uix-bg-custom-title\">3. (Optional) Handles builder controls of "
+"backend template usage so that we can use our own templates instead of the "
+"plugin.</h4>"
 msgstr ""
 
-#: ../helper/tabs/usage.php:53
-msgid ""
-"&nbsp;&nbsp;&nbsp;&nbsp;(1) WordPress comes with a theme and plugin editor "
-"as part of the core functionality. You can find it in your install by going "
-"to <strong>\"Appearance > Editor\"</strong> from your sidebar."
-msgstr ""
-
-#: ../helper/tabs/usage.php:61
-msgid ""
-"&nbsp;&nbsp;&nbsp;&nbsp;(2) You can connect to your site via an "
-"<strong>FTP</strong> client, download a copy of the file you want to change, "
-"make the changes and then upload the file back to the server, overwriting "
-"the file that’s on the server."
-msgstr ""
-
-#: ../helper/tabs/usage.php:66
-msgid ""
-"<h4 class=\"uix-bg-custom-title\">5. Handles builder controls of backend "
-"template usage so that we can use our own templates instead of the plugin."
-"</h4>"
-msgstr ""
-
-#: ../helper/tabs/usage.php:69
+#: ../helper/tabs/usage.php:44
 msgid ""
 "Backend templates are in the <strong>uix-page-builder-sections</strong> "
 "folder. Includes custom \"css, js, php\" files. If you want to custom your "
