--- a/languages/uix-page-builder.pot
+++ b/languages/uix-page-builder.pot
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Uix Shortcodes 1.0.0\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tags/_s\n"
 "POT-Creation-Date: 2015-06-12 21:51:31+0000\n"
-"POT-Revision-Date: Fri Jan 13 2017 12:36:21 GMT+0800 (CST)\n"
+"POT-Revision-Date: Fri Jan 13 2017 12:55:21 GMT+0800 (CST)\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -504,8 +504,7 @@ msgstr ""
 #: ../helper/tabs/about.php:21
 msgid ""
 "Embed a shortcode into the editor of any post, page, or custom post type. "
-"Use <code>[uix_pb_sections]</code> to add it to your Post, Widgets or Page "
-"content."
+"Use <code>[uix_pb_sections]</code> to add it to your Page content."
 msgstr ""
 
 #: ../helper/tabs/about.php:26 ../uix-page-builder-sections/sections/config.php:
