--- a/languages/uix-page-builder.pot
+++ b/languages/uix-page-builder.pot
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Uix Shortcodes 1.0.0\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tags/_s\n"
 "POT-Creation-Date: 2015-06-12 21:51:31+0000\n"
-"POT-Revision-Date: Fri Jan 13 2017 14:02:14 GMT+0800 (CST)\n"
+"POT-Revision-Date: Fri Jan 13 2017 14:11:28 GMT+0800 (CST)\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -503,8 +503,8 @@ msgstr ""
 
 #: ../helper/tabs/about.php:21
 msgid ""
-"Embed a shortcode into the editor of any post, page, or custom post type. "
-"Use <code>[uix_pb_sections]</code> to add it to your Page content."
+"Embed a shortcode <code>[uix_pb_sections]</code> into the editor of "
+"<strong>Pages Add New Screen</strong>."
 msgstr ""
 
 #: ../helper/tabs/about.php:26 ../uix-page-builder-sections/sections/config.php:
