--- a/languages/uix-page-builder.pot
+++ b/languages/uix-page-builder.pot
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Uix Shortcodes 1.0.0\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tags/_s\n"
 "POT-Creation-Date: 2015-06-12 21:51:31+0000\n"
-"POT-Revision-Date: Thu Jan 26 2017 02:25:24 GMT+0800 (CST)\n"
+"POT-Revision-Date: Thu Jan 26 2017 02:40:24 GMT+0800 (CST)\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -719,7 +719,8 @@ msgid ""
 "<p>You will find <strong>\"Uix Page Builder Attributes\"</strong> settings in "
 "a meta box in your WordPress backend when you create a new page or when you "
 "are editing an existing one. This box is usually directly above the "
-"\"Publish\" meta box.</p>"
+"\"Publish\" meta box. <br>Click <strong>\"Use Visual Builder\"</strong> button "
+"to enter the visual editing mode.</p>"
 msgstr ""
 
 #: ../uix-page-builder-custom/sections/config.php:7
